Bug 7149 - tdfx driver not working because of getsecs undefined symbol
Summary: tdfx driver not working because of getsecs undefined symbol
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/tdfx (show other bugs)
Version: 7.1 (2006.05)
Hardware: Other Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2006-06-07 11:57 UTC by Gustavo Pichorim Boiko
Modified: 2006-06-17 09:35 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch fixing the problem (1.21 KB, patch)
2006-06-07 11:59 UTC, Gustavo Pichorim Boiko
no flags Details | Splinter Review

Description Gustavo Pichorim Boiko 2006-06-07 11:57:12 UTC
The latest stable tdfx driver is not loading, and in the log message it has 
"undefined symbol: getsecs"

The attached patch fixes the problem by simply replacing getsecs by 
xf86getsecs.
Comment 1 Gustavo Pichorim Boiko 2006-06-07 11:59:15 UTC
Created attachment 5837 [details] [review]
patch fixing the problem
Comment 2 Donnie Berkholz 2006-06-17 09:35:25 UTC
Applied, thanks for the patch!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.