Bug #7149 <https://bugs.freedesktop.org/show_bug.cgi?id=7149> Change use of     getsecs to xf86getsecs (Gustavo Pichorim Boiko).